--- a/app-ui/src/main/res/values/strings.xml
+++ b/app-ui/src/main/res/values/strings.xml
@@ -46,6 +46,14 @@
     <!-- Подтверждение партнера -->
     <string name="confirm_partner_screen_title">Отсканируйте метку на корове, чтобы подтвердить ее данные</string>
 
+    <!-- Подтверждение партнера -->
+    <string name="parameter_selection_text">Основной параметр</string>
+    <string name="parameter_selection_button">Найти пару</string>
+    <string name="parameter_selection_meatVolume">Скорость набора веса</string>
+    <string name="parameter_selection_health">Здоровье</string>
+    <string name="parameter_selection_milkVolume">Удой</string>
+    <string name="parameter_selection_mass">Вес</string>
+
     <!-- Все что ниже удалить -->
     
     <!--Регистрация-->
